tests/rosetta/out/Fortran/averages-median-2.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program averages_median_2
  implicit none
  character(len=100) :: s0
  character(len=100) :: s1
    integer :: i
      integer :: minIndex
      integer :: j
      integer :: tmp
    integer :: arr
    integer :: half
    integer :: med
  write(s0,'(G0)') median((/3,1,4,1/))
  print *, s0
  write(s1,'(G0)') median((/3,1,4,1,5/))
  print *, s1
  contains
  recursive real function sel(list,k) result(res)
    integer, intent(in) :: list
    integer, intent(in) :: k
    i = 0
    do while ((i <= k))
      minIndex = i
      j = (i + 1)
      do while ((j < size(list)))
        if ((list(((j)+1)) < list(((minIndex)+1)))) then
          minIndex = j
        end if
        j = (j + 1)
      end do
      tmp = list(((i)+1))
      list(((i)+1)) = list(((minIndex)+1))
      list(((minIndex)+1)) = tmp
      i = (i + 1)
    end do
    res = list(((k)+1))
    return
  end function sel
  recursive real function median(a) result(res)
    integer, intent(in) :: a
    arr = a
    half = int(((size(arr) / 2)))
    med = sel(arr,half)
    if ((mod(size(arr),2) == 0)) then
      res = (((med + arr((((half - 1))+1)))) / 2)
      return
    end if
    res = med
    return
  end function median
end program averages_median_2
